# alisa

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  metadata.rs  tasks.rs  workspace.rs
src/commands/: init.rs  mod.rs
src/commands/init/: platform.rs  prompt.rs  schema.rs  validation.rs
src/runtime/: resolver.rs
tests/: init.rs
